# flex_optimization

./: LICENSE.txt  README.md  requirements.txt  setup.cfg
examples/: load_data.py  metric_example.py  stepwise_optimization.py  trashs.py  two_d_gaussian.py
examples/support_files/: data_error_export_20220528-135216.csv  data_error_export_20220528-135216.pickle
examples/visualizations/: method_star.py
flex_optimization/: __init__.py  method_logger.py  problem_statement.py  visualize.py
flex_optimization/core/: data_point.py  method.py  method_subclass.py  problem.py  recorder.py  stop_criteria.py  utils.py  variable.py  visualize.py
flex_optimization/extras/: batch.py
flex_optimization/methods/: README.md  __init__.py  _create_readme.py  hill_climber.py
flex_optimization/methods/active_methods/: BFGS.py  _sampler.py  baysian_dragon.py  gradient.py  halton.py  latin_hypercube.py  (+4 more)
flex_optimization/problems/: README.md  __init__.py  _create_readme.py  ackley.py  create_readme.py  gaussian.py  rastrigin.py  rosenbrock.py  rosenbrock_variant.py  sphere.py  two_d_gaussian.py  utils.py
flex_optimization/recorders/: __init__.py  basic.py  full.py
flex_optimization/stop_criteria/: README.md  __init__.py  _create_readme.py  absolute_change.py  computation_time.py  function_evaluation.py  iteration.py  rate.py  rate_moving.py  relative_change.py
flex_optimization/utils/: finite_differance.py  hessian_strategy.py  linesearch.py  scalar_function.py
test/core/: test_func.py
test/methods/: test_methods.py  test_problem_metric.py
test/problems/: test_problems.py
(+20 files in other folders)
