[metadata]
name = flex_optimization
version = 0.0.1
description = simple but flexable optimizaiton package
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/flex_optimization
license = BSD
license_files = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.22.3
    plotly>=5.6.0
    scipy>=1.7.3
    pandas>=1.4.2
